syntax = "proto3";

package ca;

option go_package = "github.com/as283-ua/yappa/api/gen";

message CertRequest {
    string user = 1;
    bytes token = 2;
    bytes csr   = 3;
}

message CertResponse {
    bytes cert = 1;
}

message AllowUser {
    string user = 1;
    bytes token = 2;
}
